# ChangeLog for perl-core/ExtUtils-Install
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Install/ChangeLog,v 1.11 2012/02/04 15:33:16 armin76 Exp $

  04 Feb 2012; Raúl Porcel <armin76@gentoo.org> ExtUtils-Install-1.54.ebuild:
  Add ~arm/~s390/~sh

  26 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ExtUtils-Install-1.54.ebuild:
  Marked ~ppc64 wrt #357599

  13 Sep 2010; Joseph Jezak <josejx@gentoo.org>
  ExtUtils-Install-1.54.ebuild:
  Marked ppc stable for bug #330387.

  28 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  ExtUtils-Install-1.54.ebuild:
  alpha/ia64/sparc stable wrt #330387

  31 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  ExtUtils-Install-1.54.ebuild:
  Stable on amd64 wrt bug #330387

  30 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  ExtUtils-Install-1.54.ebuild:
  stable x86, bug 330387

  29 Jul 2010; Jeroen Roovers <jer@gentoo.org> ExtUtils-Install-1.54.ebuild:
  Stable for HPPA (bug #330387).

  14 May 2010; Jeroen Roovers <jer@gentoo.org> ExtUtils-Install-1.54.ebuild:
  Marked ~hppa (bug #317877).

  12 May 2010; Joseph Jezak <josejx@gentoo.org>
  ExtUtils-Install-1.54.ebuild:
  Marked ~ppc for bug #317877.

  09 May 2010; Raúl Porcel <armin76@gentoo.org>
  ExtUtils-Install-1.54.ebuild:
  Add ~alpha/~ia64/~sparc wrt #317877

  30 Apr 2010; Torsten Veller <tove@gentoo.org>
  +ExtUtils-Install-1.54.ebuild, +metadata.xml:
  Import from perl-experimental for ExtUtils-MakeMaker

  23 Sep 2009; Torsten Veller <tove@gentoo.org>
  -ExtUtils-Install-1.52.ebuild:
  Cleanup

*ExtUtils-Install-1.54 (25 Aug 2009)

  25 Aug 2009; Kent Fredric <kentfredric@gmail.com>
  +ExtUtils-Install-1.54.ebuild:
  Bumped

  19 Aug 2009; Michele Beltrame <m@cattlegrid.info> ChangeLog:
  Added changelog
