@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/ExtUtils-MakeMaker
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-MakeMaker/ChangeLog,v 1.28 2012/02/04 16:42:54 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-MakeMaker/ChangeLog,v 1.29 2012/02/14 11:24:25 aballier Exp $
+
+  14 Feb 2012; Alexis Ballier <aballier@gentoo.org>
+  ExtUtils-MakeMaker-6.620.0.ebuild:
+  keyword ~x86-fbsd
 
   04 Feb 2012; Raúl Porcel <armin76@gentoo.org>
   ExtUtils-MakeMaker-6.56-r1.ebuild, ExtUtils-MakeMaker-6.580.0.ebuild,
