@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/ExtUtils-Manifest
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Manifest/ChangeLog,v 1.14 2012/02/04 15:27:34 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Manifest/ChangeLog,v 1.15 2012/02/14 11:19:14 aballier Exp $
+
+  14 Feb 2012; Alexis Ballier <aballier@gentoo.org>
+  ExtUtils-Manifest-1.600.0.ebuild:
+  keyword ~x86-fbsd
 
   04 Feb 2012; Raúl Porcel <armin76@gentoo.org>
   ExtUtils-Manifest-1.580.0.ebuild, ExtUtils-Manifest-1.590.0.ebuild,
