@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/ExtUtils-Install
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Install/ChangeLog,v 1.11 2012/02/04 15:33:16 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-Install/ChangeLog,v 1.12 2012/02/14 11:21:19 aballier Exp $
+
+  14 Feb 2012; Alexis Ballier <aballier@gentoo.org>
+  ExtUtils-Install-1.54.ebuild:
+  keyword ~x86-fbsd
 
   04 Feb 2012; Raúl Porcel <armin76@gentoo.org> ExtUtils-Install-1.54.ebuild:
   Add ~arm/~s390/~sh
